added functions for plotting.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export(calcCCD)
 export(calcDeltaCCD)
 export(getRefCor)
+export(plotHeatmap)
+export(plotRefHeatmap)
 importFrom(doRNG,"%dorng%")
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(magrittr,"%>%")
