--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: deltaccd
 Type: Package
 Title: Quantify clock gene co-expression relative to a reference
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Authors@R: person('Jake', 'Hughey', email='jakejhughey@gmail.com', role=c('aut', 'cre'))
-Description: Infer progression of the circadian clock in transcriptome data
-    in which samples are not labeled with time of day and
-    coverage of the circadian cycle may be incomplete.
+Description: deltaccd can infer progression of the circadian clock in
+    transcriptome data in which samples are not labeled with time of
+    day and coverage of the circadian cycle may be incomplete.
 License: GPL-2
 URL: https://github.com/hugheylab/deltaccd
 Encoding: UTF-8
@@ -15,6 +15,11 @@ Depends:
 Imports:
 	doParallel (>= 1.0.11),
 	doRNG (>= 1.6.6),
+	dplyr (>= 0.7.4),
 	foreach (>= 1.4.3),
-	statmod (>= 1.4.30)
+	ggplot2 (>= 2.2.1),
+	magrittr (>= 1.5),
+	statmod (>= 1.4.30),
+	tidyr (>= 0.7.2)
 RoxygenNote: 6.0.1
+Roxygen: list(markdown = TRUE)
