First pkgdown run

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,3 +24,8 @@ Imports:
 	tidyr (>= 0.7.2)
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+BugReports: https://github.com/hugheylab/deltaccd/issues
