--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: deltaccd
 Type: Package
 Title: Quantify clock gene co-expression relative to a reference
-Version: 0.0.0.9004
-Authors@R: person('Jake', 'Hughey', email = 'jakejhughey@gmail.com', role = c('aut', 'cre'))
+Version: 0.1
+Authors@R: as.person('Jake Hughey <jakejhughey@gmail.com> [aut, cre]')
 Description: deltaccd can infer progression of the circadian clock in
-    transcriptome data in which samples are not labeled with time of
-    day and coverage of the circadian cycle may be incomplete.
+  transcriptome data in which samples are not labeled with time of day and
+  coverage of the circadian cycle may be incomplete.
 License: GPL-2
 URL: https://github.com/hugheylab/deltaccd
 Encoding: UTF-8
 LazyData: true
 Depends:
-	R (>= 3.4.1)
+	R (>= 3.4)
 Imports:
 	doParallel (>= 1.0.11),
 	doRNG (>= 1.6.6),
@@ -22,10 +22,10 @@ Imports:
 	scales (>= 0.5.0),
 	statmod (>= 1.4.30),
 	tidyr (>= 0.7.2)
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
 Roxygen: list(markdown = TRUE)
-Suggests: 
-    knitr,
-    rmarkdown
+Suggests:
+  knitr,
+  rmarkdown
 VignetteBuilder: knitr
 BugReports: https://github.com/hugheylab/deltaccd/issues
