--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,6 @@
 pandoc: 2.3.1
 pkgdown: 1.5.1
 pkgdown_sha: ~
-articles:
-  test: test.html
-last_built: 2020-05-01T17:25Z
+articles: []
+last_built: 2020-05-05T13:27Z
 
