--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,10 @@
 Package: deltaccd
 Type: Package
 Title: Quantify clock gene co-expression relative to a reference
-Version: 0.1.2
-Authors@R: as.person('Jake Hughey <jakejhughey@gmail.com> [aut, cre]')
+Version: 0.2.0
+Authors@R: as.person(c(
+  'Jake Hughey <jakejhughey@gmail.com> [aut, cre]',
+  'Elliot Outland <ehoutland@gmail.com> [aut]'))
 Description: deltaccd can infer progression of the circadian clock in
   transcriptome data in which samples are not labeled with time of day and
   coverage of the circadian cycle may be incomplete.
@@ -19,10 +21,8 @@ Imports:
   dplyr (>= 0.7.4),
   foreach (>= 1.4.3),
   ggplot2 (>= 2.2.1),
-  magrittr (>= 1.5),
   scales (>= 0.5.0),
   statmod (>= 1.4.30),
-  tidyr (>= 0.7.2),
   data.table (>= 1.14.0)
 Suggests:
   doParallel (>= 1.0.11),
