added global variables, import := from data.table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calcDeltaCCD)
 export(getRefCor)
 export(plotHeatmap)
 export(plotRefHeatmap)
+importFrom(data.table,":=")
 importFrom(data.table,data.table)
 importFrom(doRNG,"%dorng%")
 importFrom(foreach,"%do%")
