updated pkgdown site

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,9 @@ Imports:
   statmod (>= 1.4.30),
   data.table (>= 1.14.0)
 Suggests:
-  doParallel (>= 1.0.11),
-  knitr,
-  rmarkdown
+    testthat (>= 3.0.0),
+    doParallel (>= 1.0.11),
+    knitr,
+    rmarkdown
 VignetteBuilder: knitr
+Config/testthat/edition: 3
