--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: deltaccd
 Type: Package
 Title: Quantify rhythmic gene co-expression relative to a reference
-Version: 0.2.4
+Version: 0.2.5
 Authors@R: as.person(c(
   'Jake Hughey <jakejhughey@gmail.com> [aut, cre]',
   'Elliot Outland <ehoutland@gmail.com> [aut]'))
@@ -20,6 +20,7 @@ Imports:
   doRNG (>= 1.6.6),
   foreach (>= 1.4.3),
   ggplot2 (>= 2.2.1),
+  rlang (>= 0.4.11),
   scales (>= 0.5.0),
   statmod (>= 1.4.30),
   data.table (>= 1.14.0)
