--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: deltaccd can infer progression of circadian rhythms in
 URL: https://github.com/hugheylab/deltaccd
 License: GPL-2
 Encoding: UTF-8
-LazyData: true
+LazyData: false
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
 Depends:
