--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,19 @@
 Package: deltaccd
 Type: Package
 Title: Quantify rhythmic gene co-expression relative to a reference
-Version: 1.0.0
-Authors@R: as.person(c(
-  'Jake Hughey <jakejhughey@gmail.com> [aut, cre]',
-  'Elliot Outland <ehoutland@gmail.com> [aut]'))
-Description: deltaccd can infer progression of circadian rhythms in
-  transcriptome data in which samples are not labeled with time of day and
-  coverage of the circadian cycle may be incomplete. See Shilts et al. (2018)
-  <doi:10.7717/peerj.4327>.
+Version: 1.0.1
+Authors@R: c(
+  person('Jake', 'Hughey', , 'jakejhughey@gmail.com', c('aut', 'cre')),
+  person('Elliot', 'Outland', , 'ehoutland@gmail.com', 'aut'))
+Description: Infer progression of circadian rhythms in transcriptome data in
+  which samples are not labeled with time of day and coverage of the circadian
+  cycle may be incomplete. See Shilts et al. (2018) <doi:10.7717/peerj.4327>.
 URL: https://deltaccd.hugheylab.org, https://github.com/hugheylab/deltaccd
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: gzip
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
 Depends:
   R (>= 3.4)
