Add Navbar hugheylab link

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,11 @@
 url: https://deltaccd.hugheylab.org
 template:
   bootstrap: 5
+navbar:
+  structure:
+    right: [hugheylab, search, github]
+  components:
+    hugheylab:
+      text: "Hughey Lab"
+      href: "https://www.hugheylab.org/software/"
+      aria-label: "Hughey Lab"
